Initial SafePath setup: Auth flow, Redux store, and navigation structure

--- a/app.json
+++ b/app.json
@@ -1,29 +1,32 @@
 {
   "expo": {
     "name": "SafePath",
-    "slug": "SafePath",
+    "slug": "safepath",
     "version": "1.0.0",
+    "scheme": "safepath",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
-      "image": "./assets/splash-icon.png",
+      "image": "./assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": false,
+      "bundleIdentifier": "com.safepath.app"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "package": "com.safepath.app"
     },
-    "web": {
-      "favicon": "./assets/favicon.png"
-    }
+    "plugins": [
+      "expo-router",
+      "expo-secure-store"
+    ]
   }
 }
