--- a/package.json
+++ b/package.json
@@ -9,14 +9,33 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@reduxjs/toolkit": "^2.8.2",
+    "@supabase/supabase-js": "^2.52.0",
     "expo": "~53.0.17",
+    "expo-constants": "^17.1.7",
+    "expo-linking": "^7.1.7",
+    "expo-router": "~5.1.3",
+    "expo-secure-store": "~14.2.3",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
-    "react-native": "0.79.5"
+    "react-hook-form": "^7.60.0",
+    "react-native": "0.79.5",
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "^2.27.1",
+    "react-native-maps": "1.20.1",
+    "react-native-safe-area-context": "^5.5.2",
+    "react-native-safe-area-view": "^1.1.1",
+    "react-native-screens": "^4.13.1",
+    "react-native-url-polyfill": "^2.0.0",
+    "react-native-vector-icons": "^10.2.0",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "@types/react-native-vector-icons": "^6.4.18",
+    "babel-plugin-module-resolver": "^5.0.2",
     "typescript": "~5.8.3"
   },
   "private": true
