--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo": "~53.0.17",
     "expo-constants": "^17.1.7",
     "expo-linking": "^7.1.7",
+    "expo-location": "~18.1.6",
     "expo-router": "~5.1.3",
     "expo-secure-store": "~14.2.3",
     "expo-status-bar": "~2.2.3",
