--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "react-native-screens": "^4.13.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "@react-native-picker/picker": "2.11.1",
+    "@react-native-community/datetimepicker": "8.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
