--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.2.0",
     "@react-native-picker/picker": "2.11.1",
-    "@react-native-community/datetimepicker": "8.4.1"
+    "@react-native-community/datetimepicker": "8.4.1",
+    "expo-linear-gradient": "~14.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
