--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/datetimepicker": "8.4.1",
+    "@react-native-picker/picker": "2.11.1",
     "@reduxjs/toolkit": "^2.8.2",
     "@supabase/supabase-js": "^2.52.0",
+    "date-fns": "^4.1.0",
     "expo": "~53.0.17",
     "expo-constants": "^17.1.7",
+    "expo-linear-gradient": "~14.1.5",
     "expo-linking": "^7.1.7",
     "expo-location": "~18.1.6",
     "expo-router": "~5.1.3",
@@ -30,10 +34,7 @@
     "react-native-screens": "^4.13.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-redux": "^9.2.0",
-    "@react-native-picker/picker": "2.11.1",
-    "@react-native-community/datetimepicker": "8.4.1",
-    "expo-linear-gradient": "~14.1.5"
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
