--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@react-native-picker/picker": "2.11.1",
     "@reduxjs/toolkit": "^2.8.2",
     "@supabase/supabase-js": "^2.52.0",
+    "base64-arraybuffer": "^1.0.2",
     "date-fns": "^4.1.0",
     "expo": "~53.0.17",
     "expo-constants": "^17.1.7",
+    "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "~14.1.5",
     "expo-linking": "^7.1.7",
     "expo-location": "~18.1.6",
