--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -341,3 +341,36 @@ entrypoint = "./functions/similarity-calculator/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/similarity-calculator/*.html" ]
+
+[functions.location-recommender]
+enabled = true
+verify_jwt = true
+import_map = "./functions/location-recommender/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/location-recommender/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/location-recommender/*.html" ]
+
+[functions.safety-predictor]
+enabled = true
+verify_jwt = true
+import_map = "./functions/safety-predictor/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/safety-predictor/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/safety-predictor/*.html" ]
+
+[functions.pattern-detector]
+enabled = true
+verify_jwt = true
+import_map = "./functions/pattern-detector/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/pattern-detector/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/pattern-detector/*.html" ]
