--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -374,3 +374,9 @@ entrypoint = "./functions/pattern-detector/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/pattern-detector/*.html" ]
+
+[functions.danger-zones]
+enabled = true
+verify_jwt = true
+import_map = "./functions/danger-zones/deno.json"
+entrypoint = "./functions/danger-zones/index.ts"
