--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
     "react-native-screens": "^4.13.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-redux": "^9.2.0",
-    "redux-devtools-extension": "^2.13.9"
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
