--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -380,3 +380,13 @@ enabled = true
 verify_jwt = true
 import_map = "./functions/danger-zones/deno.json"
 entrypoint = "./functions/danger-zones/index.ts"
+[functions.route-safety-scorer]
+enabled = true
+verify_jwt = true
+import_map = "./functions/route-safety-scorer/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/route-safety-scorer/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/route-safety-scorer/*.html" ]
