--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -390,3 +390,14 @@ entrypoint = "./functions/route-safety-scorer/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/route-safety-scorer/*.html" ]
+
+[functions.smart-route-generator]
+enabled = true
+verify_jwt = true
+import_map = "./functions/smart-route-generator/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/smart-route-generator/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/smart-route-generator/*.html" ]
