--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "date-fns": "^4.1.0",
     "expo": "~54.0.0",
     "expo-constants": "~18.0.9",
+    "expo-device": "~8.0.9",
     "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
     "expo-location": "~19.0.7",
+    "expo-notifications": "~0.32.12",
     "expo-router": "~6.0.10",
     "expo-secure-store": "~15.0.7",
     "expo-status-bar": "~3.0.8",
