--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "safepath",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -41,6 +41,7 @@
     "react-native-screens": "^4.13.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
+    "react-native-web": "^0.21.1",
     "react-redux": "^9.2.0"
   },
   "devDependencies": {
