--- a/app.json
+++ b/app.json
@@ -2,12 +2,11 @@
   "expo": {
     "name": "SafePath",
     "slug": "safepath",
-    "version": "1.0.0",
+    "version": "1.0.3",
     "scheme": "safepath",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "userInterfaceStyle": "light",
-    "newArchEnabled": true,
     "splash": {
       "image": "./assets/images/splash-icon.png",
       "resizeMode": "contain",
@@ -15,7 +14,10 @@
     },
     "ios": {
       "supportsTablet": false,
-      "bundleIdentifier": "com.safepath.app"
+      "bundleIdentifier": "com.keradaniel.safepath.app",
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false
+      }
     },
     "android": {
       "adaptiveIcon": {
@@ -24,10 +26,7 @@
       },
       "package": "com.safepath.app"
     },
-    "plugins": [
-      "expo-router",
-      "expo-secure-store"
-    ],
+    "plugins": ["expo-router", "expo-secure-store"],
     "extra": {
       "router": {},
       "eas": {
