--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
+    "start:clean": "expo start --clear",
+    "dev": "expo start --clear --reset-cache",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
