--- a/eas.json
+++ b/eas.json
@@ -12,6 +12,13 @@
       "distribution": "internal"
     },
     "production": {
+      "env": {
+        "EXPO_PUBLIC_SUPABASE_URL": "@EXPO_PUBLIC_SUPABASE_URL",
+        "EXPO_PUBLIC_SUPABASE_ANON_KEY": "@EXPO_PUBLIC_SUPABASE_ANON_KEY",
+        "EXPO_PUBLIC_GOOGLE_MAPS_API_KEY": "@EXPO_PUBLIC_GOOGLE_MAPS_API_KEY",
+        "EXPO_PUBLIC_MAPBOX_TOKEN": "@EXPO_PUBLIC_MAPBOX_TOKEN",
+        "EXPO_PUBLIC_PROJECT_ID": "@EXPO_PUBLIC_PROJECT_ID"
+      },
       "autoIncrement": true,
       "distribution": "store"
     }
