--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -401,3 +401,9 @@ entrypoint = "./functions/smart-route-generator/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/smart-route-generator/*.html" ]
+
+[functions.delete-user-account]
+enabled = true
+verify_jwt = true
+import_map = "./functions/delete-user-account/deno.json"
+entrypoint = "./functions/delete-user-account/index.ts"
