--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "base64-arraybuffer": "^1.0.2",
     "date-fns": "^4.1.0",
     "expo": "~54.0.0",
+    "expo-apple-authentication": "~8.0.7",
+    "expo-auth-session": "~7.0.8",
     "expo-constants": "~18.0.9",
+    "expo-crypto": "~15.0.7",
     "expo-device": "~8.0.9",
     "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "~15.0.7",
