--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-auth-session": "~7.0.8",
     "expo-constants": "~18.0.9",
     "expo-crypto": "~15.0.7",
+    "expo-dev-client": "~6.0.15",
     "expo-device": "~8.0.9",
     "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "~15.0.7",
