--- a/eas.json
+++ b/eas.json
@@ -6,8 +6,7 @@
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal",
-      "autoIncrement": true
+      "distribution": "internal"
     },
     "preview": {
       "distribution": "internal"
