--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -419,3 +419,14 @@ entrypoint = "./functions/send-push-notifications/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/send-push-notifications/*.html" ]
+
+[functions.location-safety-change-notifications]
+enabled = true
+verify_jwt = true
+import_map = "./functions/location-safety-change-notifications/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/location-safety-change-notifications/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/location-safety-change-notifications/*.html" ]
