--- a/eas.json
+++ b/eas.json
@@ -16,7 +16,8 @@
         "EXPO_PUBLIC_SUPABASE_URL": "@EXPO_PUBLIC_SUPABASE_URL",
         "EXPO_PUBLIC_SUPABASE_ANON_KEY": "@EXPO_PUBLIC_SUPABASE_ANON_KEY",
         "EXPO_PUBLIC_GOOGLE_MAPS_API_KEY": "@EXPO_PUBLIC_GOOGLE_MAPS_API_KEY",
-        "EXPO_PUBLIC_PROJECT_ID": "@EXPO_PUBLIC_PROJECT_ID"
+        "EXPO_PUBLIC_PROJECT_ID": "@EXPO_PUBLIC_PROJECT_ID",
+        "EXPO_PUBLIC_SENTRY_DSN": "@EXPO_PUBLIC_SENTRY_DSN"
       },
       "distribution": "store"
     }
