--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@supabase/supabase-js": "^2.52.0",
     "base64-arraybuffer": "^1.0.2",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.3",
     "expo": "~54.0.0",
     "expo-apple-authentication": "~8.0.7",
     "expo-auth-session": "~7.0.8",
@@ -50,7 +51,8 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.21.1",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "tsx": "^4.20.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
