--- a/package.json
+++ b/package.json
@@ -52,12 +52,14 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.21.1",
     "react-redux": "^9.2.0",
-    "tsx": "^4.20.6"
+    "tsx": "^4.20.6",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.1.10",
     "@types/react-native-vector-icons": "^6.4.18",
+    "@types/uuid": "^10.0.0",
     "babel-plugin-module-resolver": "^5.0.2",
     "typescript": "~5.9.2"
   },
