--- a/eas.json
+++ b/eas.json
@@ -13,7 +13,13 @@
     },
     "preview": {
       "distribution": "internal",
+      "autoSubmit": true,
       "env": {
+        "EXPO_PUBLIC_SUPABASE_URL": "@EXPO_PUBLIC_SUPABASE_URL",
+        "EXPO_PUBLIC_SUPABASE_ANON_KEY": "@EXPO_PUBLIC_SUPABASE_ANON_KEY",
+        "EXPO_PUBLIC_GOOGLE_MAPS_API_KEY": "@EXPO_PUBLIC_GOOGLE_MAPS_API_KEY",
+        "EXPO_PUBLIC_PROJECT_ID": "@EXPO_PUBLIC_PROJECT_ID",
+        "EXPO_PUBLIC_SENTRY_DSN": "@EXPO_PUBLIC_SENTRY_DSN",
         "APP_VARIANT": "preview"
       }
     },
@@ -30,11 +36,21 @@
     }
   },
   "submit": {
-    "development": {
+    "preview": {
       "ios": {
         "appleTeamId": "9KVXT96KRA"
+      },
+      "android": {
+        "track": "internal"
       }
     },
-    "production": {}
+    "production": {
+      "ios": {
+        "appleTeamId": "9KVXT96KRA"
+      },
+      "android": {
+        "track": "production"
+      }
+    }
   }
 }
