--- a/eas.json
+++ b/eas.json
@@ -5,6 +5,7 @@
   },
   "build": {
     "development": {
+      "environment": "development",
       "developmentClient": true,
       "distribution": "internal",
       "env": {
@@ -13,6 +14,7 @@
     },
     "preview": {
       "distribution": "store",
+      "environment": "preview",
       "env": {
         "EXPO_PUBLIC_SUPABASE_URL": "@EXPO_PUBLIC_SUPABASE_URL",
         "EXPO_PUBLIC_SUPABASE_ANON_KEY": "@EXPO_PUBLIC_SUPABASE_ANON_KEY",
@@ -23,6 +25,8 @@
       }
     },
     "production": {
+      "distribution": "store",
+      "environment": "production",
       "env": {
         "EXPO_PUBLIC_SUPABASE_URL": "@EXPO_PUBLIC_SUPABASE_URL",
         "EXPO_PUBLIC_SUPABASE_ANON_KEY": "@EXPO_PUBLIC_SUPABASE_ANON_KEY",
@@ -30,8 +34,7 @@
         "EXPO_PUBLIC_PROJECT_ID": "@EXPO_PUBLIC_PROJECT_ID",
         "EXPO_PUBLIC_SENTRY_DSN": "@EXPO_PUBLIC_SENTRY_DSN",
         "APP_VARIANT": "production"
-      },
-      "distribution": "store"
+      }
     }
   },
   "submit": {
