--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -452,3 +452,14 @@ entrypoint = "./functions/vote-review/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/vote-review/*.html" ]
+
+[functions.vote-prediction]
+enabled = true
+verify_jwt = true
+import_map = "./functions/vote-prediction/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/vote-prediction/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/vote-prediction/*.html" ]
