--- a/package.json
+++ b/package.json
@@ -23,31 +23,32 @@
     "base64-arraybuffer": "^1.0.2",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
-    "expo": "~54.0.0",
+    "expo": "~54.0.25",
     "expo-apple-authentication": "~8.0.7",
-    "expo-auth-session": "~7.0.8",
-    "expo-constants": "~18.0.9",
+    "expo-auth-session": "~7.0.9",
+    "expo-constants": "^18.0.10",
     "expo-crypto": "~15.0.7",
-    "expo-dev-client": "~6.0.15",
+    "expo-dev-client": "~6.0.18",
     "expo-device": "~8.0.9",
     "expo-image-picker": "~17.0.8",
     "expo-linear-gradient": "~15.0.7",
-    "expo-linking": "~8.0.8",
+    "expo-linking": "~8.0.9",
     "expo-location": "~19.0.7",
-    "expo-notifications": "~0.32.12",
-    "expo-router": "~6.0.10",
+    "expo-notifications": "~0.32.13",
+    "expo-router": "~6.0.15",
     "expo-secure-store": "~15.0.7",
     "expo-status-bar": "~3.0.8",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
-    "react-native": "^0.81.4",
+    "react-native": "0.81.5",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.27.1",
     "react-native-maps": "1.20.1",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "^4.13.1",
+    "react-native-svg": "15.12.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.21.1",
@@ -59,6 +60,7 @@
     "@types/react": "~19.1.10",
     "@types/react-native-vector-icons": "^6.4.18",
     "babel-plugin-module-resolver": "^5.0.2",
+    "react-native-svg-transformer": "^1.5.2",
     "typescript": "~5.9.2"
   },
   "private": true
