--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -474,3 +474,14 @@ entrypoint = "./functions/auth-verify/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/auth-verify/*.html" ]
+
+[functions.website-signup]
+enabled = true
+verify_jwt = false
+import_map = "./functions/website-signup/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/website-signup/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/website-signup/*.html" ]
