--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-native-svg": "15.12.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.21.1",
+    "react-native-webview": "13.15.0",
     "react-redux": "^9.2.0",
     "tsx": "^4.20.6"
   },
