--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -485,3 +485,14 @@ entrypoint = "./functions/website-signup/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/website-signup/*.html" ]
+
+[functions.record-consent-iubenda]
+enabled = true
+verify_jwt = true
+import_map = "./functions/record-consent-iubenda/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/record-consent-iubenda/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/record-consent-iubenda/*.html" ]
