--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-native-gesture-handler": "^2.27.1",
     "react-native-google-mobile-ads": "^16.0.1",
     "react-native-maps": "1.20.1",
+    "react-native-purchases": "^9.6.11",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.13.1",
     "react-native-svg": "15.12.1",
