--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@gorhom/portal": "^1.0.14",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/cli": "^20.0.2",
     "@react-native-community/datetimepicker": "8.4.4",
